--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /audio/*
-/src/static/assets/bpmn/*
+/src/static/assets/bpmn/*.xes
+/src/static/assets/bpmn/*.bpmn
 /src/static/assets/images/*
 
 # Byte-compiled / optimized / DLL files
